# from-works-on-my-machine-to-production-ready-ai-agents-with-amazon-bedrock-agent-core

./: .gitignore  CLAUDE.md  README.md
advanced-bedrock-deployment/: invoke_agent.py  test.sh
advanced-bedrock-deployment/fraud-detection-agent/: Dockerfile  agent.py  pyproject.toml  tools.py
advanced-bedrock-deployment/infra/: Pulumi.yaml  __main__.py  pyproject.toml
advanced-bedrock-deployment/mcp-risk-server/: Dockerfile  pyproject.toml  server.py
assets/: create_slides.py  design-philosophy.md
basic-bedrock-deployment/: invoke_agent.py  pyproject.toml  test.sh
basic-bedrock-deployment/fraud-detection-agent/: agent.py  pyproject.toml
basic-bedrock-deployment/infra/: Pulumi.yaml  __main__.py
local-prototype/: agent.py  demo_simulation.py  pyproject.toml  run.sh  tools.py
