[project]
name = "mcp-risk-server"
version = "1.0.0"
description = "MCP Risk Scoring Server for Fraud Detection - deployed via AgentCore Gateway"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
