[project]
name = "fraud-detection-agent"
version = "0.1.0"
description = "Strands SDK Fraud Detection Agent - Impossible Traveler Demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
]
